# GhostType

./: .gitignore  README.md
.claude/: settings.local.json
client/: config.json  index.html  package-lock.json  package.json  vite.config.js
client/src/: main.js  style.css
client/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: app_state.rs  audio.rs  config.rs  input.rs  logging.rs  main.rs  network.rs  opus.rs  pipeline.rs
client/src-tauri/src/asr/: mod.rs  websocket.rs
client/src-tauri/src/llm/: mod.rs  ollama.rs  openai_compat.rs
client/src-tauri/src/platform/: fallback.rs  macos.rs  mod.rs
docs/: MVP.txt  TODO.md  github仓库文件结构.txt  protocol.md  test_layer2_checklist.md  test_layer3_checklist.md  test_layer4_checklist.md  test_windows_e2e_checklist.md  user-guide-windows.md  软件设计架构文档.txt
server/: requirements-macos.txt  requirements.txt  run.bat
server/app/: gui.py  logging_config.py  main.py  server_config.py  server_entry.py
server/app/core/: asr.py  fbank.py  llm.py
server/app/utils/: audio.py
server/models/: README.md
server/tests/: test_layer0_env.py  test_layer1_server.py  test_layer2_packaging.py
