[package]
name = "ghosttype-client"
version = "0.1.0"
description = "GhostType client (Tauri + Rust)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
anyhow = "1"
active-win = "0.4"
audiopus = "0.2"
cpal = "0.15"
crossbeam-channel = "0.5"
enigo = "0.1"
futures-util = "0.3"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.20"
