[package]
name = "ghosttype-client"
version = "0.1.0"
description = "GhostType client (Tauri + Rust)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1"
active-win-pos-rs = "0.9.1"
cpal = "0.15"
crossbeam-channel = "0.5"
chrono = "0.4"
enigo = "0.6"
futures-util = "0.3"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(windows)'.dependencies]
audiopus = "0.2"

[target.'cfg(not(windows))'.dependencies]
opus-sys = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[patch.crates-io]
opus-sys = { path = "vendor/opus-sys" }

[features]
default = ["release_max_level_info"]
# Release 构建自动剥离 DEBUG/TRACE，零开销
release_max_level_info = ["tracing/release_max_level_info"]
